--- a/app/views/page_tops/index.html.erb
+++ b/app/views/page_tops/index.html.erb
@@ -2,3 +2,4 @@
 <h2>ログイン</h2>
 <!-- <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>-->
 <%= link_to "Sign up now!", signup_path %>
+<p>test</p>
