--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
     <tbody>
         <tr>
             <td width="50%" height="50" style="text-align: center">
-            	<%= link_to "タイムカード", timecards_path, class: 'btn btn-primary', style: "width:80%; height:40px"%>
+            	<%= link_to "タイムカード", timecards_index_path, class: 'btn btn-primary', style: "width:80%; height:40px"%>
         	</td>
             <td width="50%" height="50" style="text-align: center">
             	<%= link_to "経費", '#', class: 'btn btn-primary', style: "width:80%; height:40px"%>
@@ -22,19 +22,20 @@
     </tbody>
 </table>
 
-<h2>管理者Menu</h2>
-<table width="80%"  align="center">
-    <td width="50%" height="50" style="text-align: center">
-            	<%= button_tag "社員マスタ", class: "btn btn-primary", style: "width:80%; height:40px" %>
-        	</td>
-            <td width="50%" height="50" style="text-align: center">
-            	<%= button_tag "TC・経費承認", class: "btn btn-primary", style: "width:80%; height:40px" %>
+<% if @user.admin %>
+	<h2>管理者Menu</h2>
+	<table width="80%"  align="center">
+		<tr>
+			<td width="50%" height="50" style="text-align: center">
+		    	<%= button_tag "社員マスタ", class: "btn btn-primary", style: "width:80%; height:40px" %>
+		    </td>
+		    <td width="50%" height="50" style="text-align: center">
+		    	<%= button_tag "TC・経費承認", class: "btn btn-primary", style: "width:80%; height:40px" %>
 			</td>
-         <tr>
-            <td width="50%" height="50"></th>
-            <td width="50%" height="50"></td>
-        </tr>
-    </tbody>
-</table>
-
-
+		</tr>
+	    <tr>
+	    	<td width="50%" height="50"></th>
+	        <td width="50%" height="50"></td>
+	    </tr>
+	</table>
+<% end %>
