--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	    <%= javascript_include_tag 'application',
 	                               'data-turbolinks-track': 'reload' %>
 	    <%= render 'layouts/shim' %>
-	    <%= javascript_include_tag "application" %>
+	    <%#= javascript_include_tag "application" %>
   </head>
   <body>
     <%= render 'layouts/header' %>
