--- a/app/views/timecards/index.html.erb
+++ b/app/views/timecards/index.html.erb
@@ -10,7 +10,7 @@
 <% @tc_list.each do |tc|%>
 	<tr>
 		<td>
-			<%= link_to tc.target_month, "#{timecards_path}/#{tc.id}" %>
+			<%= link_to tc.target_month, "#{timecards_path}/#{tc.id}/edit" %>
 		</td>
 		<td>
 			<%= Generic.find_by(kbn:"K01", key1: tc.shinsei_kbn).data1 %>
