--- a/app/views/approval/_approval_sub.html.erb
+++ b/app/views/approval/_approval_sub.html.erb
@@ -4,14 +4,18 @@
 		<%= u.name %>
 	</td>
 	<td style="text-align: center">
-		<%= Generic.find_by(kbn: "K01", key1: tc.shinsei_kbn).data1 %>
+		<% if !tc.nil? %>
+			<%= Generic.find_by(kbn: "K01", key1: tc.shinsei_kbn).data1 %>
+		<% else %>
+			未作成
+		<% end %>
 	</td>
 	<td>
 		<% if !tc.nil? %>
-			<%= link_to "確認", "#{timecards_path}/#{tc.id}" ,class: "btn btn-primary" %>
+			<%= link_to "確認", "#{timecards_path}/#{tc.id}"  %>
 		<% end %>
 		<% if !tc.nil? && tc.shinsei_kbn == 1 %>
-			<%= link_to "承認", approval_path(id: tc.id),method: :patch, class: "btn btn-primary",data: {confirm: "承認して宜しいですか？"} %>
+			<%= link_to "承認", approval_path(id: tc.id),method: :patch,data: {confirm: "承認して宜しいですか？"} %>
 		<% end %>
 	</td>
 </tr>
