--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,7 +27,7 @@
 	<table width="80%"  align="center">
 		<tr>
 			<td width="50%" height="50" style="text-align: center">
-		    	<%= button_tag "社員マスタ", class: "btn btn-primary", style: "width:80%; height:40px" %>
+		    	<%= link_to "社員マスタ", users_path, class: "btn btn-primary", style: "width:80%; height:40px" %>
 		    </td>
 		    <td width="50%" height="50" style="text-align: center">
 		    	<%= link_to "TC・経費承認", approval_path, class: "btn btn-primary", style: "width:80%; height:40px" %>
