--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,35 @@
-<% provide(:title, @user.name) %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-    </section>
-  </aside>
-</div>
+<% provide(:title, "社員一覧") %>
+
+
+<table border=1 width="60%" align="center">
+	<tr bgcolor="gray" style="text-align: center">
+		<td width="50%">名前</td>
+		<td width="20%">役職</td>
+		<td width="30%">アクション</td>
+	</tr>
+	
+	<% User.all.each do |user| %>
+		<tr>
+			<td>
+			  <%= user.name %>
+			</td>
+			<td style="text-align: center">
+			  <%= user.admin ? "所属長" :"一般" %>
+			</td>
+			<td style="text-align: center">
+				<%= link_to "参照", user_path(user)  %>&nbsp;&nbsp;
+				<%= link_to "編集", edit_user_path(user) %>&nbsp;&nbsp;
+				<%= link_to "削除", "#" %>
+			</td>
+		</tr>
+	<% end %>
+</table>
+<br />
+<table width="60%" align="center">
+	<tr>
+		<td style="text-align: right">
+			<%= link_to "新規登録" , new_user_path, action: :patch ,class: "btn btn-primary" %>
+		</td>
+	</tr>
+</table>
+
